# rsta

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: ci.yml  codecov.yml  publish.yml
benches/: backtest.rs  indicators.rs
docs/roadmap/: 014-implement-candle-indicators.md
examples/: csv_to_indicators.rs  realtime_streaming.rs  sma_crossover_backtest.rs
scripts/: gen_golden.py
src/: lib.rs
src/backtest/: mod.rs  sizing.rs
src/csv/: mod.rs
src/indicators/: candle.rs  error.rs  mod.rs  momentum.rs  traits.rs  trend.rs  utils.rs  volatility.rs  volume.rs
src/indicators/momentum/: cci.rs  mod.rs  rsi.rs  stochastic_oscillator.rs  williams_r.rs
src/indicators/trend/: adx.rs  dema.rs  ema.rs  hma.rs  ichimoku.rs  macd.rs  mod.rs  pivots.rs  sar.rs  sma.rs  tema.rs  wma.rs
src/indicators/volatility/: atr.rs  bb.rs  donchian.rs  keltner_channels.rs  mod.rs  std.rs
src/indicators/volume/: adl.rs  cmf.rs  mfi.rs  mod.rs  obv.rs  vroc.rs  vwap.rs
src/patterns/: candlestick.rs  mod.rs
src/signals/: divergence.rs  mod.rs
tests/: golden_indicators.rs
tests/common/: mod.rs
tests/data/: btc_usd_daily.csv  golden_btc_atr_14.csv  golden_btc_ema_20.csv  golden_btc_macd_12_26_9_hist.csv  golden_btc_macd_12_26_9_line.csv  golden_btc_macd_12_26_9_signal.csv  golden_btc_rsi_14.csv  golden_btc_sma_20.csv  golden_ema_5.csv  golden_rsi_14.csv  golden_sma_5.csv  sample_ohlcv.csv
todo/: 001-candlestick-pattern-recognition.md  002-chart-pattern-detection.md  003-ichimoku-cloud.md  004-macd.md  005-parabolic-sar.md  006-money-flow-index.md  007-commodity-channel-index.md  008-trading-signal-generation.md  009-crossover-detection.md  010-divergence-detection.md  011-basic-backtesting-system.md  012-position-sizing.md  013-performance-metrics.md  README.md
