[package]
name = "rsta"
version = "0.0.1"
authors = ["LSH <github@lsh.tech>"]
edition = "2021"
description = "Rust Statistical Technical Analysis (RSTA) - A library for financial technical analysis indicators"
license = "GPL-3.0"


[dependencies]
ndarray = "0.15"
thiserror = "1.0"
num-traits = "0.2"
statrs = "0.16"
