[package]
name = "rsta"
version = "0.1.0"
authors = ["LSH <github@lsh.tech>"]
edition = "2021"
rust-version = "1.82"
description = "Technical analysis indicators, streaming signals, and a single-asset backtesting engine for Rust"
license = "MIT"
repository = "https://github.com/Lsh0x/rsta"
documentation = "https://docs.rs/rsta"
readme = "README.md"
keywords = ["finance", "trading", "indicators", "backtest", "ta"]
categories = ["finance", "algorithms"]
exclude = [
    "tests/data/btc_usd_daily.csv",
    "tests/data/golden_*.csv",
    "scripts/",
    "pr_extractor.sh",
    "pr_info/",
    "docs/roadmap/",
]

[features]
default = []
csv = ["dep:csv", "dep:serde", "dep:chrono"]

[dependencies]
ndarray = "0.15"
thiserror = "1.0"
num-traits = "0.2"
statrs = "0.16"

# Optional dependencies (enabled by feature flags)
csv = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[example]]
name = "csv_to_indicators"
required-features = ["csv"]

[[bench]]
name = "indicators"
harness = false

[[bench]]
name = "backtest"
harness = false
